crates/fig-parser/tests/snapshots/integration_tests__functions__extern_declarations.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - FunctionDeclaration:
      signature:
        visibility: Default
        annotations: []
        is_extern: true
        is_effect: false
        receiver: ~
        name: malloc
        generic_params: []
        self_param: ~
        params:
          - name: size
            ty: USize
        return_types:
          - Pointer:
              nullable: false
              mutable: true
              element_type: U8
  - FunctionDeclaration:
      signature:
        visibility: Default
        annotations: []
        is_extern: true
        is_effect: false
        receiver: ~
        name: free
        generic_params: []
        self_param: ~
        params:
          - name: ptr
            ty:
              Pointer:
                nullable: false
                mutable: true
                element_type: U8
        return_types:
          - Ok
  - FunctionDeclaration:
      signature:
        visibility: Default
        annotations: []
        is_extern: true
        is_effect: false
        receiver: ~
        name: memcpy
        generic_params: []
        self_param: ~
        params:
          - name: dst
            ty:
              Pointer:
                nullable: false
                mutable: true
                element_type: U8
          - name: src
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type: U8
          - name: len
            ty: USize
        return_types:
          - Pointer:
              nullable: false
              mutable: true
              element_type: U8
  - FunctionDeclaration:
      signature:
        visibility: Default
        annotations: []
        is_extern: true
        is_effect: false
        receiver: ~
        name: printf
        generic_params: []
        self_param: ~
        params:
          - name: fmt
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type: U8
        return_types:
          - I32
