crates/fig-parser/tests/snapshots/integration_tests__functions__mut_self.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Node
      generic_params: []
      requires: []
      fields:
        - name: data
          ty: I32
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          segments:
            - Node
          generic_args: []
        name: consume
        generic_params: []
        self_param:
          is_pointer: false
          is_mutable: true
        params: []
        return_types:
          - I32
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          segments:
            - Node
          generic_args: []
        name: transform
        generic_params: []
        self_param:
          is_pointer: false
          is_mutable: true
        params: []
        return_types:
          - Path:
              segments:
                - Node
              generic_args: []
      body:
        statements:
          - Pass
