crates/fig-parser/tests/snapshots/integration_tests__functions__namespaced_methods.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Vector2
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: F64
        - name: y
          ty: F64
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          segments:
            - Vector2
          generic_args: []
        name: new
        generic_params: []
        self_param: ~
        params:
          - name: x
            ty: F64
          - name: y
            ty: F64
        return_types:
          - Path:
              segments:
                - Vector2
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          segments:
            - Vector2
          generic_args: []
        name: zero
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              segments:
                - Vector2
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          segments:
            - Vector2
          generic_args: []
        name: len
        generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params: []
        return_types:
          - F64
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          segments:
            - Vector2
          generic_args: []
        name: dot
        generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params:
          - name: other
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    segments:
                      - Vector2
                    generic_args: []
        return_types:
          - F64
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          segments:
            - Vector2
          generic_args: []
        name: add
        generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params:
          - name: other
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    segments:
                      - Vector2
                    generic_args: []
        return_types:
          - Path:
              segments:
                - Vector2
              generic_args: []
      body:
        statements:
          - Pass
