crates/fig-parser/tests/snapshots/integration_tests__functions__return_slice_array.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: empty_slice
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Array:
              element_type: U8
              size: ~
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: null_terminated
        generic_params: []
        self_param: ~
        params:
          - name: s
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type: U8
          - name: len
            ty: USize
        return_types:
          - Array:
              element_type: U8
              size: ~
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: fixed_buffer
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Array:
              element_type: U8
              size:
                IntegerLiteral:
                  base: Decimal
                  digits: "64"
                  suffix: ~
      body:
        statements:
          - Pass
